--- a/styles.css
+++ b/styles.css
@@ -121,6 +121,11 @@ section {
     margin: 1rem auto;
 }
 
+.img-caption {
+    font-size: 0.8rem;
+    width: 80%;
+    margin: auto;
+}
 
 
 
@@ -446,7 +451,7 @@ main#carousel {
 }
 
 /* Hide the images by default */
-.mySlides {
+.mySlides, .mySlides_2 {
     display: none;
 }
 
@@ -504,7 +509,7 @@ main#carousel {
 }
 
 /* The dots/bullets/indicators */
-.dot {
+.dot, .dot_2 {
     cursor: pointer;
     height: 15px;
     width: 15px;
